<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/loading_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" 
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:indeterminateDrawable="@drawable/anim_progress"
                android:indeterminateOnly="true" />

            <TextView
                android:id="@+id/splash_text_loading"
                style="@style/text_loading_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/loading_text" />
        </LinearLayout>

        <TextView
            style="@style/text_loading_sublabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loading_version" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logo_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/desc_img_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_apuestasgmv" />

        <TextView
            style="@style/text_loading_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loading_app_name_upper" />
    </LinearLayout>

</RelativeLayout>