<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background" >

    <!-- HEADER -->

    <include
        android:id="@+id/app_header"
        android:layout_alignParentTop="true"
        layout="@layout/actionbar" />

    <!-- BODY -->

    <LinearLayout
        android:id="@+id/pot_layout_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_header"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            style="@style/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/current_pot" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/red_trans" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/pot_current_pot_value"
                style="@style/text_pot_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/pot_current_pot_value"
                android:background="@drawable/box_black"
                android:orientation="vertical"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_subheader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_week_pot" />

                    <TextView
                        android:id="@+id/pot_current_pot_value_base_min"
                        style="@style/text_parraf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_subheader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_week_bet" />

                    <TextView
                        android:id="@+id/pot_current_pot_bet_min"
                        style="@style/text_parraf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/red_trans" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/text_subheader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_pot_rest" />

                    <TextView
                        android:id="@+id/pot_current_pot_rest_min"
                        style="@style/text_parraf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pot_layout_current"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            style="@style/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/pot_history" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/red_trans" />

        <ListView
            android:id="@+id/pot_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:listSelector="@android:color/transparent"
            android:dividerHeight="@null">
        </ListView>
    </LinearLayout>

</RelativeLayout>