<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/pot_date"
        style="@style/text_header_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <View
        android:id="@+id/pot_date_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pot_date"
        android:background="@color/purple_trans" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pot_date_separator"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pot_week_pot" />

            <TextView
                android:id="@+id/pot_value"
                style="@style/text_parraf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pot_week_bet" />

            <TextView
                android:id="@+id/pot_bet"
                style="@style/text_parraf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pot_week_won" />

            <TextView
                android:id="@+id/pot_won"
                style="@style/text_parraf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/pot_final_value"
        style="@style/text_pot_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

</RelativeLayout>